<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen.Register_activity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_back_first_screen"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="Register"
            android:textColor="@color/black"
            android:textSize="34dp"
            android:layout_marginVertical="15dp"/>

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bd_edit_text"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/text_email"
            android:layout_marginVertical="10dp"
            android:padding="15dp"
            android:drawablePadding="20dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bd_edit_text"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/text_pass"
            android:layout_marginVertical="10dp"
            android:padding="15dp"
            android:drawablePadding="20dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bd_edit_text"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_name"
            android:hint="@string/text_name"
            android:layout_marginVertical="10dp"
            android:padding="15dp"
            android:drawablePadding="20dp"
            android:textSize="18dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_black"
            android:fontFamily="@font/comfortaa"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginVertical="25dp"/>

    </LinearLayout>

</LinearLayout>