<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Menu.HomeFragment"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="60dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                style="@style/TextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/textHomeGameMenu"
            style="@style/TextMainMenu"
            android:textColor="@color/orange"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1sp"
            android:background="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#F4F4F4"
            android:layout_margin="15dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/europe"
                    android:layout_gravity="center" />

                <TextView
                    style="@style/TextMainMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/whole_world" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <GridLayout
                android:columnCount="2"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_weight="8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:backgroundTint="#F4F4F4"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:id="@+id/cardEurope">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/europe"
                            android:layout_gravity="center" />

                        <TextView
                            style="@style/TextMainMenu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/europe" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:backgroundTint="#F4F4F4"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:id="@+id/cardAsia">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/asia"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/asia"
                            android:layout_gravity="center"
                            style="@style/TextMainMenu"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:backgroundTint="#F4F4F4"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:id="@+id/cardAfrica">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/africa"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/africa"
                            android:layout_gravity="center"
                            style="@style/TextMainMenu"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:backgroundTint="#F4F4F4"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:id="@+id/cardAustralia">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/australia"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Australia"
                            android:layout_gravity="center"
                            style="@style/TextMainMenu"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:backgroundTint="#F4F4F4"
                    android:layout_margin="15dp"
                    android:elevation="10dp"
                    android:id="@+id/cardNorthAmerica">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/north_america"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/northAmerica"
                            android:layout_gravity="center"
                            style="@style/TextMainMenu"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSouthAmerica"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:backgroundTint="#F4F4F4"
                    android:layout_margin="15dp"
                    android:elevation="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/south_america"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/southAmerica"
                            android:layout_gravity="center"
                            style="@style/TextMainMenu"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>


        </LinearLayout>

    </LinearLayout>


</ScrollView>